feat(backend): refactor diet/workout services and enhance SmartSwap category matching